load testing/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peerchat-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peerchat-front
  template:
    metadata:
      labels:
        app: peerchat-front
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: peerchat-front
        image: malpa222/peerchat:frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 400m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: peerchat-front
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: peerchat-front
