load testing/message-relay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-relay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-relay
  template:
    metadata:
      labels:
        app: message-relay
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: message-relay
        image: malpa222/peerchat:message-relay
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
        resources:
          limits:
            cpu: 400m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: message-relay
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '5001'
spec:
  type: NodePort
  ports:
  - port: 5001
  selector:
    app: message-relay
