load testing/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: user-service
        image: malpa222/peerchat:user-service
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 400m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '5001'
spec:
  type: NodePort
  ports:
  - port: 5000
  selector:
    app: user-service
