load testing/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: peerchat-front
spec: 
  ingressClassName: nginx 
  rules: 
    - host: "peerchat.com" 
      http: 
        paths: 
          - backend: 
              service: 
                name: peerchat-front
                port: 
                  number: 80 
            path: / 
            pathType: Prefix
